@@ -24,14 +24,14 @@ public class DonEnergoHtmlParser {
         Elements tbodyAll = doc.select("table.table_site1 tr:gt(1)");
         tbodyAll.forEach(row -> {
             items.add(new PowerOutageItem(
-                    row.getElementsByTag("tr").get(0).getElementsByTag("td").get(0).text(),
-                    row.getElementsByTag("tr").get(0).getElementsByTag("td").get(1).text(),
-                    row.getElementsByTag("tr").get(0).getElementsByTag("td").get(2).text(),
-                    row.getElementsByTag("tr").get(0).getElementsByTag("td").get(3).text(),
-                    row.getElementsByTag("tr").get(0).getElementsByTag("td").get(4).text(),
-                    row.getElementsByTag("tr").get(0).getElementsByTag("td").get(5).text(),
-                    row.getElementsByTag("tr").get(0).getElementsByTag("td").get(6).text(),
-                    row.getElementsByTag("tr").get(0).getElementsByTag("td").get(7).text(),
+                    row.getElementsByTag("tr").getFirst().getElementsByTag("td").get(0).text(),
+                    row.getElementsByTag("tr").getFirst().getElementsByTag("td").get(1).text(),
+                    row.getElementsByTag("tr").getFirst().getElementsByTag("td").get(2).text(),
+                    row.getElementsByTag("tr").getFirst().getElementsByTag("td").get(3).text(),
+                    row.getElementsByTag("tr").getFirst().getElementsByTag("td").get(4).text(),
+                    row.getElementsByTag("tr").getFirst().getElementsByTag("td").get(5).text(),
+                    row.getElementsByTag("tr").getFirst().getElementsByTag("td").get(6).text(),
+                    row.getElementsByTag("tr").getFirst().getElementsByTag("td").get(7).text(),
                     zoneId
             ));
         });
